--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -1,8 +1,8 @@
 // VARIABLES
-$primary: bleu;
-$secondary:grey;
-$danger:red;
-
+$primary: #7A3C92;
+$success:#475097;
+$danger:#D8545A;
+$white: #f9f9f9;
 // RESET
 *{
     padding: 0;
@@ -10,19 +10,110 @@ $danger:red;
     box-sizing: border-box;
     
 }
+// MIXINS
+@mixin centered {
+    padding: 1rem;
+    text-align: center;
+    margin-top: 1rem;
+}
+
+// GENERAL
+
 .container{
     max-width:1180px;
     margin: 0 auto;
+    padding: 1rem;
+    
+}
+.alert-success{
+    background: $success;
+    color:$white;
+   @include centered;
+    
+}
+.alert-danger{
+    background: $danger;
+    color:$white; 
+    @include centered;
 }
 
 body{
     #main__nav{
         display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding:  1rem 0;
+        background: $primary;
+        color:$white;
         .logo{
             width:250px;
+            margin-left: 2rem;
+        }
+        #hamburger{
+            width: 2rem;
+            height: 2rem;
+            position:relative;
+            display: flex;
+            flex-flow: column;
+            justify-content: space-evenly;
+            right: 2rem;
+            cursor: pointer;
+            span{
+                width:100%;
+                height: 4px;
+                background: $white;  
+            }
+            
+            @media(min-width:600px){
+                display: none;
+            }
         }
         nav{
+            position: absolute;
+            top:68px;
+            right: -2000px;
+            width:300px;
+            
+            height: 100%; 
+            background: $primary;
+            &.open{
+                animation:  1s linear slideIn forwards;
+            }
+            &.close{
+ animation:  1s linear slideOut forwards;
+            }
+            ul{
+                list-style: none;
+
+                li{ 
+                    padding:  0.5rem 1rem;
+                    a{
+                        color:$white;
+                        text-decoration: none;
+                       
+                    }
+                }
+            }
+            @keyframes slideIn{
+                from{
+                    right: -2000px;
+                }to{
+                    right: 0;
+                  
+                }
+            }
+            @keyframes slideOut{
+                from{
+                   right:0;
+                 
+                }to{
+                     right: -2000px;
+                }
+            }
             @media(min-width:600px){
+                position: relative;
+                right: 0;
+                padding: 1rem auto;
                 display: flex;
                 justify-content: space-between;
                 width:100%;
@@ -31,15 +122,24 @@ body{
                     display: flex;
                     flex-direction:row;
                     list-style: none;
+                    margin-right: 2rem;
                     li{
                         padding: 0.5rem 1rem;
+                        a{
+                            color:white;
+                            text-decoration: none;
+                        }
                     }
                 }
             }
         }
     }
+    
     form{
+        max-width:300px;
+        margin: 0 auto;
         .form-group{
+
             p.danger{
                 color: $danger;
             }
