articles by category

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7,6 +7,7 @@
 
 h1, h2, h3, h4, h5, h6 {
   line-height: 0.95;
+  color: #7a3c92;
 }
 
 p {
@@ -17,6 +18,10 @@ p {
   max-width: 1180px;
   margin: 0 auto;
   padding: 1rem;
+}
+
+.container h1 a {
+  text-decoration: none;
 }
 
 .alert-success {
@@ -53,6 +58,10 @@ body #main__nav {
 body #main__nav .logo {
   width: 250px;
   margin-left: 2rem;
+}
+
+body #main__nav .logo h1 {
+  color: #f9f9f9;
 }
 
 body #main__nav #hamburger {
@@ -141,7 +150,7 @@ body #main__nav nav ul li a {
   }
 }
 
-body #articles .article {
+body #articles .article, body #article .article {
   margin: 2.5rem 0;
   padding: 1rem;
   background: #f9f9f9;
@@ -149,32 +158,36 @@ body #articles .article {
           box-shadow: 1.25px 1.25px 5px rgba(122, 60, 146, 0.3);
 }
 
-body #articles .article__header {
+body #articles .article__header, body #article .article__header {
   position: relative;
 }
 
-body #articles .article__header a {
+body #articles .article__header a, body #article .article__header a {
   text-decoration: none;
   color: #7a3c92;
 }
 
-body #articles .article__header span {
+body #articles .article__header span, body #article .article__header span {
   position: absolute;
   top: -2rem;
   right: 0;
   background: #7a3c92;
   padding: 0.25rem 0.5rem;
+}
+
+body #articles .article__header span a, body #article .article__header span a {
   text-transform: uppercase;
+  text-decoration: none;
   color: #f9f9f9;
   -webkit-box-shadow: 1.25px 1.25px 5px rgba(122, 60, 146, 0.5);
           box-shadow: 1.25px 1.25px 5px rgba(122, 60, 146, 0.5);
 }
 
-body #articles .article__body {
+body #articles .article__body, body #article .article__body {
   margin: 1rem auto;
 }
 
-body #articles .no-articles {
+body #articles .no-articles, body #article .no-articles {
   padding: 1rem;
   text-align: center;
 }
