--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -52,6 +52,7 @@ p{
 }
 
 body{
+  
     #main__nav{
         display: flex;
         align-items: center;
@@ -59,6 +60,7 @@ body{
         padding:  1rem 0;
         background: $primary;
         color:$white;
+        align-items: baseline;
         .logo{
             width:250px;
             margin-left: 2rem;
@@ -89,9 +91,9 @@ body{
         }
         nav{
             position: absolute;
-            top:68px;
+            top:63px;
             left: -300px;   
-            width:300px;         
+            width:202px;         
             height: 100%; 
             background: $primary;
             transition: 0.3s;
@@ -105,12 +107,27 @@ body{
                     }
                 }
             }
-            
+            form{
+                position:relative;
+                top:-0.25rem;
+                input{
+                    border:1px solid $white;
+                height:2rem;
+                }
+                button{
+                    position:absolute;
+                bottom: 50%;
+                top:50%;
+                transform: translateY(-50%);
+                    right: 0.1rem;
+                }
+            }
             @media(min-width:600px){
                 position: static;
                 padding: 1rem auto;
                 display: flex;
                 justify-content: space-between;
+                
                 width:100%;
                 ul{
                     display: flex;
@@ -125,6 +142,7 @@ body{
                         }
                     }
                 }
+                
             }
         }
     }
@@ -132,7 +150,7 @@ body{
        
         .article{
             margin: 2.5rem 0;
-            padding: 1rem;
+            padding: 1.5rem;
             background: $white;
             @include boxShadow(5px,rgba(122, 60, 146,0.3));
            
