admin articles controller created

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -232,6 +232,42 @@ body #articles .article__body, body #article .article__body {
   margin: 1rem auto;
 }
 
+body #articles .article .article__options, body #article .article .article__options {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body #articles .article .article__options a, body #article .article .article__options a {
+  display: block;
+  position: absolute;
+  left: 130px;
+  top: 10px;
+  padding: 0.3rem 0.5rem;
+  text-decoration: none;
+}
+
+body #articles .article .article__options form, body #article .article .article__options form {
+  position: absolute;
+  left: 0;
+  top: 10px;
+}
+
+body #articles .article .article__options .btn-info, body #article .article .article__options .btn-info {
+  background: #475097;
+  color: white;
+}
+
+body #articles .article .article__options .btn-danger, body #article .article .article__options .btn-danger {
+  background: #D8545A;
+  color: white;
+  margin-left: 0;
+}
+
 body #articles .no-articles, body #article .no-articles {
   padding: 1rem;
   text-align: center;
