--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -294,7 +294,7 @@ body form .form-group {
 body form .form-group .form-control {
   width: 100%;
   margin-top: 0.25rem;
-  height: 1.8rem;
+  min-height: 1.8rem;
 }
 
 body form .form-group p.danger {
