--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -29,7 +29,7 @@ p{
     line-height: 1.5;
 }
 .container{
-    max-width:1180px;
+    max-width:960px;
     margin: 0 auto;
     padding: 1rem;
     h1{
@@ -208,9 +208,9 @@ body{
             }
         }
     }
-    #articles,#article{
+    #articles,#article,#users{
        
-        .article{
+        .article,.user{
             margin: 2.5rem 0;
             padding: 1.5rem;
             background: $white;
@@ -241,7 +241,10 @@ body{
             &__body{
                 margin: 1rem auto;
             }
-            .article__options{
+            .user__footer{
+                margin-top:  1rem ;
+            }
+            .article__options,.user__options{
                 position: relative;
                 display: flex;
                 align-items: center;
@@ -271,10 +274,13 @@ body{
                 }
             }
         }
-        .no-articles{
+        .no-articles,.no-users{
             padding: 1rem;
             text-align: center;
         }
+    }
+    #users,#user{
+
     }
     
     form{
